// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lerna exec --ignore <pkg> exec-test -- -1 1`] = `
--> in "package-2" with extra args "-1"
file-2.js
package.json
`;

exports[`lerna exec echo $LERNA_PACKAGE_NAME 1`] = `
package-1
package-2
`;

exports[`lerna exec exec-test --scope <pkg> 1`] = `
--> in "package-1" with extra args ""
file-1.js
package.json
`;

exports[`lerna exec without -- 1`] = `
--> in "package-1" with extra args ""
file-1.js
package.json
--> in "package-2" with extra args ""
file-2.js
package.json
`;
